--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@prisma/client": "^6.14.0",
     "@tsconfig/node16": "^16.1.4",
+    "amqplib": "^0.10.9",
     "axios": "^1.11.0",
     "bcrypt": "^6.0.0",
     "connect-redis": "^9.0.0",
